2008-04-29  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: (on_tv_button_press):
	* src/baobab-utils.c: (filechooser_cb), (show_bars),
	(baobab_check_dir), (set_label_scan), (open_file_with_application),
	(trash_file), (contents_changed):
	* src/baobab-utils.h:
	* src/baobab.c: (start_proc_on_location), (rescan_current_dir),
	(baobab_init), (start_proc_on_command_line):
	* src/baobab.h:
	* src/callbacks.c: (on_menuscanhome_activate),
	(on_menuallfs_activate), (on_tbscanhome_clicked),
	(on_tbscanall_clicked), (on_tb_scan_remote_clicked),
	(open_file_cb), (scan_folder_cb):
	
	Starting Gio migration

2008-04-14  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (rescan_current_dir):
	BUGZILLA #528084 - disk usage analyzer does not update Total filesystem 
	capacity information when clicking refresh

2008-03-26  Sebastien Bacher  <seb128@ubuntu.com>

	* src/baobab.c: (main): fix strings not marked as translatable (#523524)

2008-03-17  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/callbacks.c: (on_about_activate):
	Fixed copyright date

2008-03-11  Fabio Marzocca  <thesaltydog@gmail.com>

	* help/C/baobab.xml:
	BUGZILLA #521422 - Typo in documentation

2008-01-05  Christian Kirbach <Christian.Kirbach@googlemail.com>
  
	* pixmaps/24x24/Makefile.am (update-icon-cache): 
	* pixmaps/scalable/Makefile.am (update-icon-cache): run gtk-update-icon-cache for
  	install-hook and uninstall-hook. Fixes #436204
	Original patch by Brian Pepple <bpepple@fedoraproject.org>

2007-12-14  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c: start processing the uri given on command line in
	an idle so that the main loop is properly started. Fixes #497415.

2007-12-13  Fabio Marzocca  <thesaltydog@gmail.com>

	* help/C/baobab.xml:
        Updated help file 

2007-12-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (filechooser_response_cb):
	BUGZILLA #501082 – Help button leads to wrong section
